<resources>
    <string name="app_name">NMedia!</string>
    <string name="nmedia">NMedia!</string>
    <string name="titleAuthor">Netology universitet</string>
    <string name="button_menu">button_menu</string>
    <string name="description_button_share">description_button_share</string>
    <string name="description_button_likes">description_button_likes</string>
    <string name="description_button_views">description_button_views</string>
    <string name="test_views_5">5</string>
    <string name="test_number">12</string>
    <string name="description_image_conten">description_image_conten</string>
    <string name="description_image_logo">description_image_logo</string>
    <string name="test_number_999">999</string>
    <string name="test_number_52">52</string>
    <string name="post_menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="edit_text">Edit text</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="test_number_0">0</string>
</resources>