<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/timePosts"
        app:layout_constraintEnd_toStartOf="@id/buttonMenu"
        app:layout_constraintStart_toEndOf="@id/imageLogoNetology"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/title" />

    <ImageView
        android:id="@+id/imageLogoNetology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/description_image_logo"
        android:src="@mipmap/avatar_round"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timePosts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/buttonMenu"
        app:layout_constraintStart_toEndOf="@id/imageLogoNetology"
        app:layout_constraintTop_toBottomOf="@id/titleAuthor"
        tools:text="@sample/posts.json/data/time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMenu"
        style="@style/Widget.AppCompat.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageLogoNetology, buttonMenu, timePosts"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/text" />

    <TextView
        android:id="@+id/textCountViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/test_views_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/barrierForViews"
        app:layout_constraintTop_toBottomOf="@id/textContent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierForViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="textCountViews"
        tools:layout_editor_absoluteX="395dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageLikes"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:checkable="true"
        android:contentDescription="@string/like"
        android:textColor="@color/icon_button_tint"
        app:icon="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/textContent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/test_number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageShare"
        style="@style/Widget.AppCompat.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share"
        android:textColor="@color/icon_button_tint"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageLikes"
        app:layout_constraintTop_toBottomOf="@id/textContent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/test_number" />

    <ImageView
        android:id="@+id/imageViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@id/imageShare"
        app:layout_constraintEnd_toStartOf="@id/barrierForViews"
        app:layout_constraintTop_toTopOf="@id/imageShare"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />


</androidx.constraintlayout.widget.ConstraintLayout>